<resources>
    <string name="app_name">My Feed</string>


    <!--Welcome Fragment Ui Titles-->
    <string name="title_breaking_news">Breaking News</string>
    <string name="subtitle_breaking_news">We track headlines in 7 categories across over 50 countries, and at over a hundred top publications and blogs, in near real time.</string>
    <string name="title_favourite_articles">Favourite Articles</string>
    <string name="subtitle_favourite_articles">My feed provide an offline mode so you can save your favorite articles and read them latter</string>
    <string name="title_search_for_articles">Search</string>
    <string name="subtitle_search">Search articles that mention a specific topic or keyword, we index every article published by over 30,000 news sources and blogs.</string>
    <string name="title_keep_in_touch">Keep in touch</string>
    <string name="subtitle_keep_in_touch">Get notification on new articles</string>


    <!--Fragments Labels-->
    <string name="label_user_feed">My Feed</string>
    <string name="label_headlines">HeadLines</string>
    <string name="label_favorite_articles">Favorites</string>
    <string name="label_profile">Profile</string>
    <string name="label_search">Search</string>

    <!--Ui Titles-->
    <string name="title_my_feed">My Feed</string>
    <string name="title_headlines">Headlines</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_continue_as_a_guest">Continue as a Guest</string>
    <string name="title_log_in">Log in</string>
    <string name="title_username">Abdallah Murad</string>
    <string name="title_keywords">Keywords</string>
    <string name="title_sources">Sources</string>
    <string name="title_categories">Categories</string>
    <string name="title_activity_article_details">ArticleDetailsActivity</string>
    <string name="description_profile_image">User Image</string>
    <string name="hint_search">Search News</string>
    <string name="title_activity_search_results2">SearchResultsActivity2</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_language">Language</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>


</resources>
