<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main_graph"
    app:startDestination="@id/navigation_my_feed">
    <!--START : Main Activity Fragments -->
    <fragment
        android:id="@+id/navigation_my_feed"
        android:name="com.am.my_feed.feed.FeedFragment"
        android:label="@string/label_user_feed"
        tools:layout="@layout/fragment_feed">

        <argument
            android:name="title"
            android:defaultValue="@string/title_my_feed" />

        <argument
            android:name="category"
            android:defaultValue="general" />


    </fragment>
    <fragment
        android:id="@+id/navigation_headlines"
        android:name="com.am.my_feed.headlines.HeadlinesFragment"
        android:label="@string/label_headlines"
        tools:layout="@layout/fragment_headlines">
        <argument
            android:name="title"
            android:defaultValue="@string/title_headlines" />

    </fragment>
    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.am.my_feed.favorite.FavoriteFragment"
        android:label="@string/label_favorite_articles"
        tools:layout="@layout/fragment_favorite">
        <argument
            android:name="title"
            android:defaultValue="@string/title_favorites" />

    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.am.my_feed.search.SearchFragment"
        android:label="@string/label_search"
        tools:layout="@layout/fragment_search">
        <argument
            android:name="title"
            android:defaultValue="@string/title_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.am.my_feed.profile.ProfileFragment"
        android:label="@string/label_profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="title"
            android:defaultValue="@string/title_profile" />

    </fragment>
    <!--END : Main Activity Fragments -->

</navigation>