<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_my_feed"
        android:icon="@drawable/ic_home"
        android:title="@string/title_my_feed" />

    <item
        android:id="@+id/navigation_headlines"
        android:icon="@drawable/ic_globe"
        android:title="@string/title_headlines" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/title_favorites" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />


</menu>
